--- a/arquivo/train.ipynb
+++ b/arquivo/train.ipynb
@@ -1,183 +1,244 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D\n",
-    "from keras.layers import MaxPooling2D\n",
-    "from keras.layers import Flatten\n",
-    "from keras.layers import Dense\n"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    },
+    "colab": {
+      "name": "train.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inicializando a Rede Neural Convolucional\n",
-    "classifier = Sequential()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Passo 1 - Primeira Camada de Convolução\n",
-    "classifier.add(Conv2D(32, (3, 3), input_shape = (64, 64, 3), activation = 'relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Passo 2 - Pooling\n",
-    "classifier.add(MaxPooling2D(pool_size = (2, 2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Adicionando a Segunda Camada de Convolução\n",
-    "classifier.add(Conv2D(32, (3, 3), activation = 'relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Passo 3 - Flattening\n",
-    "classifier.add(Flatten())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Passo 4 - Full connection\n",
-    "classifier.add(Dense(units = 128, activation = 'relu'))\n",
-    "classifier.add(Dense(units = 1, activation = 'sigmoid'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compilando a rede\n",
-    "classifier.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics = ['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
-    "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
-    "                                   shear_range = 0.2,\n",
-    "                                   zoom_range = 0.2,\n",
-    "                                   horizontal_flip = True)\n",
-    "\n",
-    "validation_datagen = ImageDataGenerator(rescale = 1./255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pré-processamento das imagens de treino e validação\n",
-    "training_set = train_datagen.flow_from_directory('dataset_treino',\n",
-    "                                                 target_size = (64, 64),\n",
-    "                                                 batch_size = 32,\n",
-    "                                                 class_mode = 'binary')\n",
-    "\n",
-    "validation_set = validation_datagen.flow_from_directory('dataset_validation',\n",
-    "                                                        target_size = (64, 64),\n",
-    "                                                        batch_size = 32,\n",
-    "                                                        class_mode = 'binary')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "     # Executando o treinamento (esse processo pode levar bastante tempo, dependendo do seu computador)\n",
-    "classifier.fit_generator(training_set,\n",
-    "                         steps_per_epoch = 8000,\n",
-    "                         epochs = 5,\n",
-    "                         validation_data = validation_set,\n",
-    "                         validation_steps = 2000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l8oTBAAYPTJf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Conv2D\n",
+        "from keras.layers import MaxPooling2D\n",
+        "from keras.layers import Flatten\n",
+        "from keras.layers import Dense\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9YQ7pW5gPTJp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Inicializando a Rede Neural Convolucional\n",
+        "classifier = Sequential()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f6cfhyiCPTJz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Passo 1 - Primeira Camada de Convolução\n",
+        "classifier.add(Conv2D(32, (3, 3), input_shape = (64, 64, 3), activation = 'relu'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yVpkeYLBPTJ7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Passo 2 - Pooling\n",
+        "classifier.add(MaxPooling2D(pool_size = (2, 2)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9sW_nzNfPTKA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Adicionando a Segunda Camada de Convolução\n",
+        "classifier.add(Conv2D(32, (3, 3), activation = 'relu'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2bdly5HGPTKG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0USE3qZAPTKN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Passo 3 - Flattening\n",
+        "classifier.add(Flatten())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HzrMDttNPTKT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Passo 4 - Full connection\n",
+        "classifier.add(Dense(units = 128, activation = 'relu'))\n",
+        "classifier.add(Dense(units = 1, activation = 'sigmoid'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gHaItEuSPTKZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Compilando a rede\n",
+        "classifier.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics = ['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sNwHBKD9PTKf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
+        "                                   shear_range = 0.2,\n",
+        "                                   zoom_range = 0.2,\n",
+        "                                   horizontal_flip = True)\n",
+        "\n",
+        "validation_datagen = ImageDataGenerator(rescale = 1./255)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LZGM2d3CPTKk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Pré-processamento das imagens de treino e validação\n",
+        "training_set = train_datagen.flow_from_directory('dataset_treino',\n",
+        "                                                 target_size = (64, 64),\n",
+        "                                                 batch_size = 32,\n",
+        "                                                 class_mode = 'binary')\n",
+        "\n",
+        "validation_set = validation_datagen.flow_from_directory('dataset_validation',\n",
+        "                                                        target_size = (64, 64),\n",
+        "                                                        batch_size = 32,\n",
+        "                                                        class_mode = 'binary')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lM_pVETkPTKr",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Train"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "scrolled": true,
+        "id": "Vjf02ncBPTKs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "     # Executando o treinamento (esse processo pode levar bastante tempo, dependendo do seu computador)\n",
+        "classifier.fit_generator(training_set,\n",
+        "                         steps_per_epoch = 8000,\n",
+        "                         epochs = 5,\n",
+        "                         validation_data = validation_set,\n",
+        "                         validation_steps = 2000)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eEB_oPrMPTKx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
